more styling,fix overflow

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,8 +1,10 @@
 body{
   box-sizing: border-box;
   font-family: 'Roboto', sans-serif;
+  line-height: 1.7em;
 }
-*, *::after, *::before{
+
+  *, *::after, *::before{
   box-sizing: inherit;
 }
 
@@ -29,7 +31,6 @@ body{
 .logo-back {
   width: 100%;
   margin-top: 15rem;
-  height: 30%;
   background-color: #120303;
   opacity: 50%;
 }
@@ -39,28 +40,21 @@ body{
   flex-direction: column;
 }
 
-img {
-  max-width:100%;
-  height:auto;
+.odin-img {
+  margin: 20px;  
+  height: 170px;
+  width: 130px;
 }
 
 .img-info > a{
   color: #fff;
   text-decoration: none;
 }
-.img-logo{
-  width: auto;
-  text-align: center;
-
-  font-size: 2rem;
-  gap: 20px;
-}
 /* END left side */
 
 /* right side */
 .right {
   background-color: #ebedfa;
-
   width: 65%;
   height: 100%;
   display: flex;
@@ -80,7 +74,7 @@ img {
   justify-content: space-between;
   height: 400px;  
   display: flex;
-  background-color: #dddddd;
+  background-color: #ffffff;
   width: 100%;
   text-align: left;
   justify-items: space-around;
@@ -120,15 +114,18 @@ img {
   text-align: justify;
 }
 
-.button {
+input#submit {
+  font-size: 1.2rem;
   width: 250px;
   height: 50px;
   border-radius: 10px;
-  margin-bottom: 10%;
+  margin-bottom: 5%;
   cursor: pointer;
-  background-color: #596d48;
+  background-color: #b9e4e3;
   border: hidden;
-  color: #fff;
+  color: #444;
+  text-shadow: 0px 1px 1px #ffffff;
+  border-bottom: 2px solid #b2b2b2;
 }
 
 .box-three {
@@ -136,16 +133,27 @@ img {
 }
 
 .box-two input {
-  border-radius: 5px;
-  border-style: groove;
-  margin: 10px 0;
-  display: flex;
+  font-size: 120%;
+  color: #5a5854;
+  background-color: #f2f2f2;
+  border: 1px solid #bdbdbd;
+  border-radius: 7px;
+  padding: 5px 5px 5px 15px;
+  background-repeat: no-repeat;
+  background-position: 8px 9px;
+  margin: 5px 0 5px 0;
+  display: block;
   width: 250px;
-  height: 45px;
-  padding-left: 15px;
+  height: 35px;
+}
+
+input:focus, input:hover {
+  background-color: #ffffff;
+  border: 1px solid #b1e1e4;
 }
 
 label {
+  text-shadow: #7e7d7d;
   padding: 20px 0;
 }
 
